# exemplos-redes

./: .gitignore  README.md  ex_01_ola.py  pyproject.toml
01_revisao/: ex_01_ola.py  ex_02_lista01_q16.py  ex_02_lista01_q17.py  ex_03_lista01_q22.py  ex_04_lista01_q23.py  ex_05_lista02_q02.py  ex_06_lista02_q09.py  ex_07_lista02_q11.py  ex_08_lista02_q13.py  ex_09_lista03_q01.py  ex_10_lista03_q02.py  ex_11_lista03_q05.py  ex_12_lista04_q02.py  ex_13_lista04_q02.py  ex_14_lista05_q01.py
01_sequencial/: ex_02_testando.py  ex_04_variaveis.py  ex_05_saida.py  ex_06_entrada.py  ex_08_media_aritmetica.py  ex_09_media_aritmetica.py  ex_10_area_circulo.py  ex_10_math_pi.py  ex_11_math_pi.py  ex_11_math_raiz.py  ex_12_math_funcoes.py  ex_12_math_raiz.py  ex_13_salario.py  ex_15_op_logicos.py  ex_15_op_relacionais_media.py  ex_16_op_logicos_media.py  ex_17_op_logicos_media.py  ex_18_resolvido01_q01.py  ex_19_composicao_string.py  ex_19_resolvido01_q02.py
02_condicional/: ex_02_par_impar.py  ex_03_situacao_1.py  ex_04_situacao_2.py  ex_05_situacao_validacao_1.py  ex_07_resolvido02_q01.py  ex_08_resolvido03_q01.py  ex_09_resolvido03_q02.py  ex_10_resolvido03_q03.py  ex_11_resolvido03_q04.py  ex_12_resolvido03_q05.py  ex_13_resolvido03_q06.py
02_socket/: ex_01_operacoes.py  ex_02_operacoes.py  ex_03_cliente_udp.py  ex_03_servidor_udp.py  ex_04_calculadora_cliente_udp.py  ex_04_calculadora_servidor_udp.py  ex_05_calculadora_cliente_tcp.py  ex_05_calculadora_servidor_tcp.py  ex_06_cliente_struct.py  ex_06_comum.py  ex_06_servidor_struct.py  ex_06_threads.py  ex_07_threads.py  ex_08_threads.py  ex_09_threads.py  ex_10_cliente_thread_tcp.py  ex_10_servidor_thread_tcp.py  ex_10_threads.py  ex_11_cliente_struct.py  ex_11_cliente_thread.py  ex_11_servidor_struct.py  ex_11_servidor_thread.py  ex_11_servidor_thread_tcp.py
03_banco/: ex_01_resolvido_ddl_dml.sql  ex_01_resolvido_slide_03_pag_28.sql  ex_02_conexao_manual.py  ex_03_conexao_auto.py  ex_04_aluno.py  ex_04_aluno_arquivo_unico.py  ex_05_sql_injection.py
03_repeticao/: ex_01_while.py  ex_02_while_validacao.py  ex_03_while_fatorial.py  ex_05_for.py  ex_06_for.py  ex_07_for_fatorial.py  ex_09_for_colecao.py  ex_10_resolvido04_q01.py  ex_11_resolvido04_q02.py  ex_12_resolvido04_q03.py  ex_14_resolvido04_q05.py  ex_15_resolvido04_q06.py
04_string/: ex_02_strings_operacoes.py
04_strings/: ex_02_strings_operacoes.py  ex_03_strings_for.py  ex_05_strings_caso.py
04_web/: ex_01_viacep.py  ex_02_ibge_ufs.py  ex_03_ibge_municipios.py  ex_04_ibge_municipios.py  ex_05_omdb.py  ex_06_openweathermap.py  ex_06_suap.py  ex_07_openweathermap.py  ex_07_suap_simples.py  ex_08_suap_session.py  ex_08_ws_flask.py  ex_09_ws_calculadora.py  ex_09_ws_flask.py  ex_10_ws_dicionario_servidor.py  ex_11_ws_dicionario_cliente.py
05_listas/: ex_01_listas.py  ex_03_operacoes.py  ex_04_listas_de_listas.py  ex_05_listas_pedidos_1.py  ex_06_listas_pedidos.py  ex_06_listas_pedidos_2.py  ex_07_resolvido05_q01.py  ex_08_tuplas.py  ex_09_tuplas.py  ex_10_sets.py  ex_11_dicionarios.py  ex_12_resolvido06_q01.py  ex_13_lista04_q02.py  ex_13_resolvido_dicionario.py
06_modularizacao/: ex_01_funcoes.py  ex_02_funcoes_param.py  ex_03_funcoes_media.py  ex_04_funcoes_referencia.py  ex_05_recursao_print.py  ex_06_recursao_fatorial.py  ex_07_escopo.py  ex_08_funcao_main.py  ex_09_vendas_funcoes.py  (+3 more)
(+95 files in other folders)
